fix russian words typos

--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -35,7 +35,7 @@
   "confirmTransferToLocal": { "message": "Хотите переместить синхронизированные настройки в локальный профиль?\nОни будут объединены с существующими данными." },
   "confirmTransferToSync": { "message": "Хотите переместить локальные настройки синхронизированный профиль?\nОни будут объединены с существующими данными." },
 
-  "modePatterns": { "message": "Использовать проки по шаблону и порядку" },
+  "modePatterns": { "message": "Использовать прокси по шаблону и порядку" },
   "modeDisabled": { "message": "Отключить (Использовать настройки Firefox)" },
   "forAll": { "message": "Для всех URL" },
   "noProxies": { "message": "У вас нет каких-либо прокси настроек."},
@@ -55,7 +55,7 @@
 
 
   "errorWas": { "message": "Ошибка. Пожалуйста, попробуйте снова." },
-  "errorSlash": { "message": "Не разрешено использовать cимвол слэш в шаблонах. Вы не можете сопоставить URL пути вследствие ограничения Firefox." },
+  "errorSlash": { "message": "Не разрешено использовать символ слэш в шаблонах. Вы не можете сопоставить URL пути вследствие ограничения Firefox." },
   "errorEmpty": { "message": "Поле не может быть пустым." },
 
 
@@ -160,7 +160,7 @@
   "unmatchedURLs": {"message": "URLs не удовлетворяющие шаблону"},
 
 
-  "pasteList": { "message": "Вставте список прокси ниже."},
+  "pasteList": { "message": "Вставьте список прокси ниже."},
   "formats": {"message": "Форматы"},
   "simple": { "message": "простой" },
   "complete": { "message": "полный" },
