improve french translation

--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -8,7 +8,7 @@
   "error": { "message": "Erreur" },
   "erroNoSettings": { "message": "Aucun paramètre n'a été trouvé. Essayez de réinstaller FoxyProxy." },
 
-  "deleteAll": { "message": "Tous supprimer" },
+  "deleteAll": { "message": "Tout supprimer" },
   "export": { "message": "Exporter les paramètres" },
   "import": { "message": "Importer les paramètres" },
   "importProxyList": { "message": "Importer la liste des Proxy" },
@@ -22,46 +22,46 @@
   "delete": { "message": "Supprimer" },
   "deleteNot": { "message": "Ne Pas Supprimer" },
   "deleteBrowserData": { "message": "Supprimer les données du navigateur" },
-  "deleteBrowserDataDescription": { "message": "Cache, cookies, base de donnée indexée, cache local du DOM, données du plugin, données du service." },
-  "deleteBrowserDataNotDescription": { "message": "Mot de passe sauvegardés, historique et formulaire du navigateur, historique de téléchargement, webSQL, et certificats de serveur." },
+  "deleteBrowserDataDescription": { "message": "Cache, cookies, base de données indexée, cache local du DOM, données de l'extension, données du service." },
+  "deleteBrowserDataNotDescription": { "message": "Mots de passe sauvegardés, historique et formulaire du navigateur, historique de téléchargement, webSQL, et certificats de serveur." },
   "done": { "message": "Fait !" },
 
-  "about": { "message": "A propos" },
+  "about": { "message": "À propos" },
   "syncSettings": { "message": "Synchroniser les Paramètres" },
-  "syncSettingsHelp": { "message": "Activer pour utiliser Firefox Sync (les paramètres sont synchronisés entre tous vos navigateurs Firefox). Desactiver pour sauvegarder les paramètres localement. A noter que deux profils de paramètres peuvent coexister, un synchronisé et un local" },
+  "syncSettingsHelp": { "message": "Activer pour utiliser Firefox Sync (les paramètres sont synchronisés entre tous vos navigateurs Firefox). Désactiver pour sauvegarder les paramètres localement. À noter que deux profils de paramètres peuvent coexister, un synchronisé et un local" },
 //  "onOff": { "message": "Activer/Desactiver" },
   "on": { "message": "Activer" },
-  "off": { "message": "Desactiver" },
-  "confirmTransferToLocal": { "message": "Voulez-vous appliquez les paramètres synchronisés au profil local ?\nLes données existantes seront fusionnées." },
-  "confirmTransferToSync": { "message": "Voulez-vous appliquez les paramètres locaux au profil synchronisé ?\nLes données existantes seront fusionnées." },
+  "off": { "message": "Désactiver" },
+  "confirmTransferToLocal": { "message": "Voulez-vous appliquer les paramètres synchronisés au profil local ?\nLes données existantes seront fusionnées." },
+  "confirmTransferToSync": { "message": "Voulez-vous appliquer les paramètres locaux au profil synchronisé ?\nLes données existantes seront fusionnées." },
 
   "modePatterns": { "message": "Utiliser les proxys activés par modèle et ordre" },
-  "modeDisabled": { "message": "Désactiver (Utiliser les paramètres de firefox)" },
+  "modeDisabled": { "message": "Désactiver (utiliser les paramètres de firefox)" },
   "forAll": { "message": "pour toutes les URLs" },
-  "noProxies": { "message": "Vous n'avez aucun paramètres de proxy."},
+  "noProxies": { "message": "Vous n'avez aucun paramètre de proxy."},
 
 
 
   "edit": { "message": "Modifier" },
   "patterns": { "message": "Modèles" },
-  "confirmDelete": { "message": "Etes-vous sûr de vouloir supprimer ?" },
+  "confirmDelete": { "message": "Êtes-vous sûr de vouloir supprimer ?" },
 
   "addProxy": { "message": "Ajouter un Proxy" },
   "editProxy": { "message": "Modifier le Proxy $1" },
 
 
-  "editPatterns": { "message": "Editer les Modèles" },
-  "editPatternsFor": { "message": "Editer les Modèles de $1" },
+  "editPatterns": { "message": "Éditer les Modèles" },
+  "editPatternsFor": { "message": "Éditer les Modèles de $1" },
 
 
   "errorWas": { "message": "Une erreur est survenue. Merci de réessayer." },
-  "errorSlash": { "message": "Pas de barre oblique dans des modèles génériques. Vous ne pouvez pas associer d'URL à cause des restrictions de Firefox." },
+  "errorSlash": { "message": "Pas de barre oblique dans les modèles génériques. Vous ne pouvez pas associer d'URL à cause des restrictions de Firefox." },
   "errorEmpty": { "message": "Le champ ne peut pas être vide." },
 
 
   "importEnd": { "message": "Les paramètres ont été correctement importés" },
   "patternsChanged": { "message": "Certains modèles ont été changés car ils contenaient des barres obliques. Elles ne sont plus supportées." },
-  "importEndSlash": { "message": "Import fini. Les barres obliques ne sont plus supportées dans les modèles à cause d'un bug de Firefox. Merci de revoir votre modèle et de supprimer les éventuelles barres obliques." },
+  "importEndSlash": { "message": "Importation terminée. Les barres obliques ne sont plus supportées dans les modèles à cause d'un bug de Firefox. Merci de revoir votre modèle et de supprimer les éventuelles barres obliques." },
   "errorUserPass": { "message": "Merci d'entrer votre nom d'utilisateur et mot de passe." },
   "errorFetch": { "message": "Une erreur est survenue durant l'opération" },
 
@@ -74,7 +74,7 @@
 
   "disabled": { "message": "Désactiver" },
   "active": { "message": "Activer" },
-	"activeNote": { "message": "FoxyProxy ignore tous sur cette page à moins d'être explicitement configuré pour" },
+	"activeNote": { "message": "FoxyProxy ignore tout sur cette page à moins d'être explicitement configuré pour" },
   "noMatch": { "message": "Pas de Correspondance" },
   "none": { "message": "Aucun" },
 
@@ -84,7 +84,7 @@
   "protocol": { "message": "Protocole" },
   "whitePatterns": { "message": "Modèle d'inclusion" },
   "blackPatterns": { "message": "Modèle d'exclusion" },
-  "importedPattern": { "message": "Ce modèle a été importé à partir d'une ancienne version de FoxyProxy et a été modifié lors de l'import. Voici le modèle original non modifié:" },
+  "importedPattern": { "message": "Ce modèle a été importé à partir d'une ancienne version de FoxyProxy et a été modifié lors de l'importation. Voici le modèle original non modifié:" },
 
 
   "patternMatch": { "message": "Ce modèle correspond à l'URL!" },
@@ -110,7 +110,7 @@
 
   "patternTester": { "message": "Testeur de Modèles" },
   "patternHelp": { "message": "Aide Modèle" },
-  "welcome": { "message": "Bienvenu" },
+  "welcome": { "message": "Bienvenue" },
   "options": { "message": "Options" },
   "optionsPage": { "message": "Options FoxyProxy" },
   "enterUrl": { "message": "Entrer l'URL à tester" },
@@ -142,7 +142,7 @@
   "saveEditPattern": { "message": "Sauvegarder et Modifier les Modèles" },
   "imported": { "message": "Importé" },
   "addBlacklistTip": { "message": "Ajouter des modèles d'exclusions pour localhost, 127.0.0.1, 192.168.*.*, 172.16.*.*, & 10.*.*.*" },
-  "addBlacklist": { "message": "Ajouter des modèles d'exclusions pour empêcher ce proxy d'être utiliser pour localhost et des adresses IP privées ou d'intranet" },
+  "addBlacklist": { "message": "Ajouter des modèles d'exclusions pour empêcher ce proxy d'être utilisé pour localhost et des adresses IP privées ou d'intranet" },
   "addWhitelistTip": { "message": "Ajouter un modèle d'inclusion *" },
   "patternCheatSheet":  { "message": "Aide-Mémoire pour les Modèles" },
 
@@ -164,15 +164,15 @@
   "formats": {"message": "Formats"},
   "simple": { "message": "simple" },
   "complete": { "message": "complet" },
-  "simpleFormat": { "message": "l'adresse ip ou nom du serveur et le port sont requis. login:mot de passe sont optionnels."},
+  "simpleFormat": { "message": "l'adresse ip/nom du serveur et le port sont requis. nom d'utilisateur:mot de passe sont optionnels."},
   "ipPort": {"message": "ip:port"},
-  "ipPortUsernamePassword": {"message": "ip:port:login:mot de passe"},
+  "ipPortUsernamePassword": {"message": "ip:port:nom d'utilisateur:mot de passe"},
   "examples": {"message": "Exemples"},
   "completeFormat": { "message": "Dans ce format, vous pouvez spécifier tous les paramètres du proxy. Mais seulement le protocole et le nom du serveur sont requis."},
-  "overwriteProxies": { "message": "Ecraser les proxys existants" },
+  "overwriteProxies": { "message": "Écraser les proxys existants" },
   "overwritProxiesHelp1": { "message": "Cochez pour supprimer tous les proxys existants et les remplacer par ceux de la liste." },
   "overwritProxiesHelp2": { "message": "Décocher pour ajouter les proxys de la liste à ceux déjà existant." },
-  "confirmOverwrite": { "message": "Etes-vous sûr de vouloir ecraser les proxys existants ?" },
+  "confirmOverwrite": { "message": "Êtes-vous sûr de vouloir écraser les proxys existants ?" },
   "importsSkipped": { "message": "$1 lignes ignorées car elles ne pouvaient pas être interprétées:\n\n$2" },
   "importSucceeded": {
     "message": "$1 proxys interprétés et stockés."
