--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -142,7 +142,7 @@
   "saveEditPattern": { "message": "Сохранить & и редактировать шаблоны" },
   "imported": { "message": "Импортировано" },
   "addBlacklistTip": { "message": "Добавить blacklist шаблоны для локального адреса, 127.0.0.1, 192.168.*.*, 172.16.*.*, & 10.*.*.*" },
-  "addBlacklist": { "message": "Добавить black шаблоны чтобы предотвратить использование этого прокси для локального адреса и внутренних/частных IP адресов" },
+  "addBlacklist": { "message": "Добавить black шаблоны, чтобы предотвратить использование этого прокси для локального адреса и внутренних/частных IP адресов" },
   "addWhitelistTip": { "message": "Добавить whitelist шаблон *" },
   "patternCheatSheet":  { "message": "Шпаргалка по шаблонам" },
 
@@ -170,8 +170,8 @@
   "examples": {"message": "Примеры"},
   "completeFormat": { "message": "Используя этот формат вы можете указать все прокси настройки, но только протокол и адрес прокси являются необходимыми."},
   "overwriteProxies": { "message": "Перезаписать имеющиеся прокси" },
-  "overwritProxiesHelp1": { "message": "Активируйте чтобы заменить все существующие прокси новыми из этого списка." },
-  "overwritProxiesHelp2": { "message": "Дезактивируйте чтобы добавить прокси из списка к уже имеющимся." },
+  "overwritProxiesHelp1": { "message": "Активируйте, чтобы заменить все существующие прокси новыми из этого списка." },
+  "overwritProxiesHelp2": { "message": "Дезактивируйте, чтобы добавить прокси из списка к уже имеющимся." },
   "confirmOverwrite": { "message": "Вы уверены, что хотите удалить все ранее добавленные прокси?" },
   "importsSkipped": { "message": "Пропущено $1 линий потому что они не смогли быть обработаны:\n\n$2" },
   "importSucceeded": {
